--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/rawad33/tarneeb#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.10.6"
+    "mongoose": "^5.10.6",
+    "nodemailer": "^6.4.11"
   }
 }
