--- a/tarneeb/package.json
+++ b/tarneeb/package.json
@@ -2,6 +2,10 @@
   "name": "tarneeb",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.18.3",
+    "npm": "6.14.6"
+  },
   "proxy": "http://localhost:4001",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
